@@ -3,6 +3,7 @@ $Id$
 
 266	Luke Howard <lukeh@padl.com>
 
+	* fix for BUG#129: native linker doesn't use LDFLAGS
 	* fix for BUG#402: incorrectly detected glibc on armel
 	* fix for BUG#411: memory leak in do_init()
 	* fix for BUG#412: check whether resolv.conf has changed
